--- a/Browse.css
+++ b/Browse.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0px;
   padding: 0px;
@@ -20,12 +19,12 @@ iframe {
 button {
   width: 75%;
   height: 50px;
-  border: 2px solid white;
+  border: 2px solid black;
   border-right: 0px;
   font-size: 25px;
   padding: 12px;
   background-color: semitransparent;
-  color: white;
+  color: black;
   font-weight: bold;
 }
 
@@ -36,7 +35,7 @@ button {
 .main button {
   width: 25%;
   height: 50px;
-  background-color: #eee;
+  background-color: gray;
   color: black;
   transition: all 0.3s;
   float: right;
@@ -47,4 +46,44 @@ button {
 
 .main button:hover {
   opacity: 0.8;
+}
+
+.browse-header {
+  max-height: 1px;
+  margin-bottom: 100px;
+}
+
+/* Multiple Carousel items styling */
+.col-md-3 {
+  display: inline-block;
+  margin-left: -4px;
+}
+.col-md-3 img {
+  width: 100%;
+  height: auto;
+}
+body .carousel-indicators li {
+  background-color: red;
+}
+body .carousel-indicators {
+  bottom: 0;
+}
+body .carousel-control-prev-icon,
+body .carousel-control-next-icon {
+  background-color: red;
+}
+body .no-padding {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.image-size img {
+  width: 50px;
+  height: auto;
+}
+
+.icon-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
