--- a/Browse.css
+++ b/Browse.css
@@ -53,43 +53,28 @@ button {
   margin-bottom: 100px;
 }
 
-/* Multiple Carousel items styling */
-.col-md-3 {
-  display: inline-block;
-  margin-left: -4px;
-}
-.col-md-3 img {
-  width: 100%;
-  height: auto;
-}
-body .carousel-indicators li {
-  background-color: red;
-}
-body .carousel-indicators {
-  bottom: 0;
-}
-body .carousel-control-prev-icon,
-body .carousel-control-next-icon {
-  background-color: red;
-}
-body .no-padding {
-  padding-left: 0;
-  padding-right: 0;
+.Caption-Styles h5 {
+  color: white !important;
+  font-size: 25px;
 }
 
-.image-size img {
-  width: 50px;
-  height: auto;
+.Image-Styles {
+  max-width: 100%;
+  height: 100%;
+  width: auto;
+
+  display: block;
+  margin: 0 auto;
 }
 
-.icon-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+.Image-Styles:after {
+  background: rgba(0, 0, 0, 0)
+    linear-gradient(to bottom, rgba(0, 0, 0, 0) 0px, rgba(0, 0, 0, 0.6) 100%)
+    repeat 0 0;
+  z-index: 1;
 }
 
-.item-center {
-  display: flex;
-  justify-content: center;
+.Carousel-Spacing {
+  margin-top: 20px;
+  margin-bottom: 50px;
 }
