--- a/templates/register.html
+++ b/templates/register.html
@@ -12,9 +12,10 @@
     <meta name="viewport" content ="width=device-width, initial-scale=1, user-scalable=yes"/>
 </head>
 <body>
+    <header></header>
     <form action="/add_user" method="POST">
         {% csrf_token %}
-        {{form}}
+        {{form.as_p}}
         <input type="submit" value="submit">
     </form>
 </body>
