--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<script src="register.js"></script>
-<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+
+<script src="https://apis.google.com/js/platform.js" async defer></script>
+<meta name="google-signin-client_id" content="107577167980-4voh0ckavrhmb8g5c8m7sv3rokaua4s2.apps.googleusercontent.com">
 <link rel="stylesheet" href="login.css">
 <head>
     <link rel="icon" href="images/BookFavicon.png"/>
@@ -13,18 +14,18 @@
     <header></header>
     <div class="box">
         <form>
-            <span class="text-center">Register</span>
+            <span class="text-center">login</span>
         <div class="input-container">
-            <input id="username" type="text" required=""/>
+            <input type="text" required=""/>
             <label>Username</label>		
         </div>
         <div class="input-container">		
-            <input id="password" type="password" required=""/>
+            <input type="password" required=""/>
             <label>Password</label>
         </div>
-        <!-- <a href="#" id="signup">Don't have an account? Sign up!</a> -->
+        <a href="#" id="signup">Don't have an account? Sign up!</a>
         <br>
-        <button type="button" class="btn" onclick="registerUser()">submit</button>
+        <button type="button" class="btn">submit</button>
     </form>	
     </div>
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
