--- a/Browse.css
+++ b/Browse.css
@@ -78,3 +78,11 @@ button {
   margin-top: 20px;
   margin-bottom: 50px;
 }
+
+#login-success {
+  color: turquoise;
+  display: flex;
+  justify-content:
+  flex-end;
+  margin-right: 10%;
+}
