--- a/Browse.css
+++ b/Browse.css
@@ -82,7 +82,6 @@ button {
 #login-success {
   color: turquoise;
   display: flex;
-  justify-content:
-  flex-end;
+  justify-content: flex-end;
   margin-right: 10%;
 }
